TestSuite/PascalABCTests/errors/err0345_marshal.pas
program err0345_marshal;
[Result: System.Runtime.InteropServices.MarshalAs(System.Runtime.InteropServices.UnmanagedType.SafeArray)]
function f1: array of byte;
external 'any.dll';

begin end.